--- a/src/main/webapp/i18n/en/password.json
+++ b/src/main/webapp/i18n/en/password.json
@@ -2,7 +2,8 @@
   "password": {
     "title": "Password for [<strong>{{username}}</strong>]",
     "form": {
-      "button": "Save"
+      "button": "Save",
+      "clear": "Clear"
     },
     "messages": {
       "error": "<strong>An error has occurred!</strong> The password could not be changed.",
