--- a/src/main/webapp/i18n/en/settings.json
+++ b/src/main/webapp/i18n/en/settings.json
@@ -25,6 +25,9 @@
           "required": "Your last name is required.",
           "minlength": "Your last name is required to be at least 1 character",
           "maxlength": "Your last name cannot be longer than 50 characters"
+        },
+        "language": {
+          "required": "Language is required."
         }
       }
     }
